<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/light_surface"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/cartItemImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/item_image"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cartItemDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cartItemPriceTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cartItemDetailsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/cartItemQuantityTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Qty: 1"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:id="@+id/cartItemButton1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="4dp"
                    android:text="Action 1"
                    style="?attr/materialButtonOutlinedStyle"
                    android:textSize="12sp"
                    android:padding="8dp"/>

                <Button
                    android:id="@+id/cartItemButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="4dp"
                    android:text="Action 2"
                    style="?attr/materialButtonOutlinedStyle"
                    android:textSize="12sp"
                    android:padding="8dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>